#------------------------------------------------------------------------------
# Py2C - A Python to C++ compiler
# Copyright (C) 2014 Pradyun S. Gedam
#------------------------------------------------------------------------------

[metadata]
name = Py2C
version = 0.1.0-dev
description = A translator to translate implicitly statically typed Python code into human-readable C++ code.
long_description_file = README.md

# PyPI
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers

author = Pradyun S. Gedam
author_email = pradyunsg@gmail.com
url = https://github.com/pradyun/Py2C
